--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -24,6 +24,7 @@
     </script>
     <noscript>要查看<a href="http://disqus.com/?ref_noscript"> Disqus </a>评论，请启用 JavaScript</noscript>
   {% elsif site.comment.gitment %}
+    <a>hahahhahahahahhaha</a>
     <div id="gitmentContainer"></div>
     <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
