--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,14 +5,13 @@
     <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2146669"></script>
 	
   {% elsif site.comment.gitment %}
-    <a>hahahhahahahahhaha</a>
     <div id="gitmentContainer"></div>
     <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
     var gitment = new Gitment({
        owner: 'tomsun28',
-       repo: 'https://github.com/tomsun28/tomsun28.github.io.git',
+       repo: 'https://github.com/tomsun28/tomsun28.github.io',
        oauth: {
            client_id: '354d0024d2b45dfc9b11',
            client_secret: '24737f00915b4c74f09bd737be36ab09e3a61d6e',
