--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -11,7 +11,7 @@
     <script>
     var gitment = new Gitment({
        owner: 'tomsun28',
-       repo: 'https://github.com/tomsun28/tomsun28.github.io',
+       repo: 'tomsun28.github.io',
        oauth: {
            client_id: '354d0024d2b45dfc9b11',
            client_secret: '24737f00915b4c74f09bd737be36ab09e3a61d6e',
