--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,10 +42,9 @@
         <div class = "footer_div">  
            <p class="copyright text-muted">
             Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} |
-            </p>
+           </p>   
         	<div align="right">
     			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
           <!-- 访问统计 -->
           <span id="busuanzi_container_site_pv">
             本站总访问量
@@ -54,5 +53,8 @@
 
         </div>
         <div>
+        <div style="width:300px;margin:0 auto; padding:20px 0;">
+          <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002002575" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">川公网安备 51019002002575号</p></a>
+        </div>  
     </footer>
 </section>
