--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -1,4 +1,4 @@
-<header class="panel-cover {% if page.layout == 'post' or page.layout == 'page' %}panel-cover--collapsed{% endif %}" style="background-image: url('/images/background-cover.svg')">
+<header class="panel-cover {% if page.layout == 'post' or page.layout == 'page' %}panel-cover--collapsed{% endif %}" style="background-color:rgb(248, 32, 78); background-image: url('/images/background-cover.svg')">
   <div class="panel-main">
 
     <div class="panel-main__inner panel-inverted">
