--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,19 +40,23 @@
         </div>
 
         <div class = "footer_div">  
-           <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} |
-           </p>   
-           <div style="width:300px;margin:0 auto; padding:20px 0; float:right;">
-            <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002002575" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="/images/beian.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">川公网安备 51019002002575号</p></a>
+          <div>
+            <p class="copyright text-muted">
+              Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} |
+             </p>   
+          </div>
+           <div style="margin-left: 5px;float:right;">
+            <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002002575" style="display:inline-block;text-decoration:none;height:15px;line-height:15px;"><img src="/images/beian.png" style="float:left;"/><p style="float:left;height:15px;line-height:15px;margin: 0px 0px 0px 5px; color:#939393;">川公网安备 51019002002575号</p></a>
           </div> 
-        	<div align="right">
-    			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        	<!-- <div align="right"> -->
+          <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
+          <div style="right: auto;">
           <!-- 访问统计 -->
           <span id="busuanzi_container_site_pv">
             本站总访问量
             <span id="busuanzi_value_site_pv"></span>次
           </span>
+          </div>
         </div>
         <div> 
     </footer>
