--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,13 +41,13 @@
 
         <div class = "footer_div">  
           <div>
-            <p class="copyright text-muted">
+            <a href="#" class="copyright text-muted">
               Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} | 
               <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002002575" style="margin-left: 3px;">
-                <img src="/images/beian.png" style="float:left;"/>
+                <!-- <img src="/images/beian.png" style="float:left;"/> -->
                 <p style="color:#939393;">川公网安备 51019002002575号</p>
               </a>
-             </p>   
+            </a>   
           </div>
            <!-- <div style="margin-left: 5px;float:right;">
             <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002002575" style="display:inline-block;text-decoration:none;height:15px;line-height:15px;"><img src="/images/beian.png" style="float:left;"/><p style="float:left;height:15px;line-height:px;margin: 0px 0px 0px 5px; color:#939393;">川公网安备 51019002002575号</p></a>
