--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,11 +41,8 @@
 
         <div class = "footer_div">  
           <div>
-            <a href="#" class="copyright text-muted">
-              Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} | 
-              <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002002575" style="margin-left: 3px;">
-                <!-- <img src="/images/beian.png" style="float:left;"/> -->
-                <p style="color:#939393;">川公网安备 51019002002575号</p>
+            <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002002575" class="copyright text-muted">
+              Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} | <span color:#939393;>川公网安备 51019002002575号</span>
               </a>
             </a>   
           </div>
