--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,8 @@
       var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
-        hm.src = "//hm.baidu.com/hm.js?{{site.baidu.id}}";
+        var protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        hm.src = protocol + "hm.baidu.com/hm.js?{{site.baidu.id}}";
         var s = document.getElementsByTagName("script")[0]; 
         s.parentNode.insertBefore(hm, s);
       })();
